fix product cards images on mobile

--- a/src/styles/partials/products.scss
+++ b/src/styles/partials/products.scss
@@ -275,7 +275,7 @@
                     bottom: 0;
                     right: 0;
                     width: 320px;
-                    height: 360px;
+                    height: 320px;
                     @include sm{
                         height: 250px;
                     }
@@ -325,7 +325,7 @@
                     bottom: 0;
                     right: 0;
                     width: 320px;
-                    height: 360px;
+                    height: 320px;
                     @include sm{
                         height: 250px;
                     }
@@ -418,8 +418,8 @@
                     position: absolute;
                     bottom: 0;
                     right: 0;
-                    width: 215px;
-                    height: 370px;
+                    width: 245px;
+                    height: 330px;
                     @include sm{
                         width: 195px;
                         height: 255px;
@@ -472,8 +472,8 @@
                     position: absolute;
                     bottom: 0;
                     right: 0;
-                    width: 215px;
-                    height: 370px;
+                    width: 245px;
+                    height: 330px;
                     @include sm{
                         width: 195px;
                         height: 255px;
